[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/web.gd" type="Script" id=1]
[ext_resource path="res://art/weapons/web1.png" type="Texture" id=2]
[ext_resource path="res://art/weapons/web2.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 5.91326

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 12.89
height = 14.16

[node name="web" type="Area2D"]

scale = Vector2( 4, 4 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
speed = 1100

[node name="globsprite" type="Sprite" parent="." index="0"]

position = Vector2( 2, 2 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="globcollision" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="websprite" type="Sprite" parent="." index="2"]

visible = false
position = Vector2( 0, 1 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="webcollision" type="CollisionShape2D" parent="." index="3"]

rotation = 1.5708
shape = SubResource( 2 )
disabled = true
_sections_unfolded = [ "Transform" ]

[node name="lifetime" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 30.0
one_shot = true
autostart = true

[node name="openweb" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_web_body_entered"]

[connection signal="timeout" from="lifetime" to="." method="_on_lifetime_timeout"]

[connection signal="timeout" from="openweb" to="." method="_on_openweb_timeout"]


